tests/broken/unclosed-if.stderr
error: "if" statement is never closed (unexpected end of template)
 --> tests/broken/unclosed-if.rs:4:54
  |
4 | #[oxiplate_inline = "{%- if should_do -%}{{ action }}"]
  |                                                      ^
